# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  cookiecutter.json  pyproject.toml
tests/: test_bake_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
