[tool.poetry]
authors = ["Alex Ko <alexkosj@gmail.com>"]
description = "Python codebase scaffold."
name = "cookiecutter-pypackage"
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cookies = "^0.6.1"
ruff = "^0.0.237"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
