[tool.poetry]
authors = ["{{ cookiecutter.full_name.replace('\"', '\\\"') }} <{{ cookiecutter.email }}>"]
description = "{{ cookiecutter.project_name }}"
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
version = "{{ cookiecutter.version }}"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
ruff = "^0.0.237"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
